Fix link color in table item headers on small devices

--- a/admin/style/scss/partials/_tables.scss
+++ b/admin/style/scss/partials/_tables.scss
@@ -178,6 +178,10 @@ td.expand {
       border-top: 1px solid var(--rch-table-1st-border);
       color: var(--rch-table-1st-color);
       background: var(--rch-table-1st-background);
+
+      a {
+        color: var(--rch-table-1st-link);
+      }
     }
 
     td::before {
