--- a/admin/style/scss/themes/_dark.scss
+++ b/admin/style/scss/themes/_dark.scss
@@ -434,6 +434,7 @@
   --rch-table-1st-color: #{$gray-light};
   --rch-table-1st-background: #{$gray-darker};
   --rch-table-1st-border-top: #{$gray-lighter};
+  --rch-table-1st-link: #{$link-outline};
   --rch-table-expand-color: var(--body-color);
   --rch-table-expand-background: var(--body-background);
   --rch-table-expand-border-top: #{$gray-lighter};
